<resources>
    <string name="app_name">YT_app</string>
    <string name="skip_ad">跳过广告</string>

    <!-- common string -->
    <string name="loading">加载中…</string>
    <string name="err_unknown">未知错误</string>
    <string name="url_err">网址不对</string>
    <string name="action_search">搜索</string>
    <string name="actionbar_game_center">游戏中心</string>
    <string name="actionbar_history">历史记录</string>
    <string name="app_other">其他</string>
    <string name="navigation_home">首页</string>
    <string name="navigation_subscribe">订阅</string>
    <string name="navigation_channel">频道</string>
    <string name="navigation_vip">会员</string>
    <string name="navigation_user">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
