<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/actionbar_search_selector"
        android:title="@string/action_search"
        app:showAsAction="always"/>

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_game"
        android:icon="@drawable/actionbar_game_selector"
        android:title="@string/actionbar_game_center"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_history"
        android:icon="@drawable/actionbar_history_selector"
        android:title="@string/actionbar_history"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_other"
        android:icon="@drawable/actionbar_more_selector"
        android:title="@string/app_other"
        app:showAsAction="never"/>

</menu>
